--- a/.github/workflows/csm-release-libs.yaml
+++ b/.github/workflows/csm-release-libs.yaml
@@ -48,7 +48,7 @@ jobs:
       - name: Import GPG key
         uses: crazy-max/ghaction-import-gpg@v6
         with:
-            gpg_private_key: "$CSM_GPG_PRIVATE_KEY"
+            gpg_private_key: ${{ secrets.CSM_GPG_PRIVATE_KEY }}
             git_user_signingkey: true
             git_commit_gpgsign: true
             git_tag_gpgsign: true
