--- a/.github/workflows/csm-release-libs.yaml
+++ b/.github/workflows/csm-release-libs.yaml
@@ -17,13 +17,11 @@ on:
       version:
         description: 'Version to release (major, minor, patch), ex: 1.0.0'
         required: true
-        # TODO: remove default from here and caller workflows in goclients
-        default: 'none'
-
+        type: string      
 jobs:
-  build-and-scan:
+  build-and-scan:    
     name: Build, Scan and Release
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest    
     steps:
       - name: Validate version input
         run: |
@@ -47,12 +45,19 @@ jobs:
           directories: .
           options: -ri
 
+      - name: Import GPG key
+        uses: crazy-max/ghaction-import-gpg@v6
+        with:
+            gpg_private_key: ${{ secrets.CSM_GPG_PRIVATE_KEY }}
+            git_user_signingkey: true
+            git_commit_gpgsign: true
+            git_tag_gpgsign: true
+            git_config_global: true
+
       - name: Create new tag
         run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'github-actions@github.com'
-          git tag v${{ github.event.inputs.version }}
-          git push origin v${{ github.event.inputs.version }}
+            git tag -s -a v${{ github.event.inputs.version }} -m "Release v${{ github.event.inputs.version }}"
+            git push origin v${{ github.event.inputs.version }}
 
       - name: Create Release
         id: release_notes
@@ -69,7 +74,5 @@ jobs:
 
       - name: Create release branch
         run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'github-actions@github.com'
           git checkout -b release/v${{ github.event.inputs.version }}
           git push origin release/v${{ github.event.inputs.version }}
