--- a/.github/workflows/csm-release-driver-module.yaml
+++ b/.github/workflows/csm-release-driver-module.yaml
@@ -55,6 +55,8 @@ jobs:
           docker pull dellemc/${{ inputs.image }}:nightly
           docker tag dellemc/${{ inputs.image }}:nightly dellemc/${{ inputs.image }}:v${{ inputs.version }}
           docker push dellemc/${{ inputs.image }}:v${{ inputs.version }}
+          docker tag dellemc/${{ inputs.image }}:v${{ inputs.version }} dellemc/${{ inputs.image }}:latest
+          docker push dellemc/${{ inputs.image }}:latest
 
       - name: Get Quay Manifest
         id: get_quay_manifest
@@ -70,7 +72,12 @@ jobs:
           --data-raw '{
             "manifest_digest": "${{ steps.get_quay_manifest.outputs.sha }}"
           }'
-
+          curl -s --location --request PUT 'https://quay.io/api/v1/repository/dell/container-storage-modules/${{ inputs.image }}/tag/latest' \
+          --header 'Content-Type: application/json' \
+          --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' \
+          --data-raw '{
+            "manifest_digest": "${{ steps.get_quay_manifest.outputs.sha }}"
+          }'
   create-release:
     name: Create release and branch
     needs: push-images
