--- a/.github/workflows/update-dependencies-to-commits.yml
+++ b/.github/workflows/update-dependencies-to-commits.yml
@@ -33,24 +33,24 @@ jobs:
       id: get-latest-shas
       run: |
         REPOS=(
-          "github.com/dell/goscaleio",
-          "github.com/dell/gopowermax/v2",
-          "github.com/dell/gounity",
-          "github.com/dell/goisilon",
-          "github.com/dell/gopowerstore",
-          "github.com/dell/gobrick",
-          "github.com/dell/gocsi",
-          "github.com/dell/goiscsi",
-          "github.com/dell/gonvme",
-          "github.com/dell/goobjectscale",
-          "github.com/dell/gofsutil",
-          "github.com/dell/dell-csi-extensions/common",
-          "github.com/dell/dell-csi-extensions/migration",
-          "github.com/dell/dell-csi-extensions/podmon",
-          "github.com/dell/dell-csi-extensions/replication",
-          "github.com/dell/dell-csi-extensions/volumeGroupSnapshot",
-          "github.com/dell/csi-metadata-retriever",
-          "github.com/dell/csi-volumegroup-snapshotter",
+          "github.com/dell/goscaleio"
+          "github.com/dell/gopowermax/v2"
+          "github.com/dell/gounity"
+          "github.com/dell/goisilon"
+          "github.com/dell/gopowerstore"
+          "github.com/dell/gobrick"
+          "github.com/dell/gocsi"
+          "github.com/dell/goiscsi"
+          "github.com/dell/gonvme"
+          "github.com/dell/goobjectscale"
+          "github.com/dell/gofsutil"
+          "github.com/dell/dell-csi-extensions/common"
+          "github.com/dell/dell-csi-extensions/migration"
+          "github.com/dell/dell-csi-extensions/podmon"
+          "github.com/dell/dell-csi-extensions/replication"
+          "github.com/dell/dell-csi-extensions/volumeGroupSnapshot"
+          "github.com/dell/csi-metadata-retriever"
+          "github.com/dell/csi-volumegroup-snapshotter"
         )
         for REPO in "${REPOS[@]}"; do
           LATEST_SHA=$(git ls-remote https://$REPO HEAD | awk '{print $1}')
