--- a/.github/workflows/update-dependencies-to-commits.yml
+++ b/.github/workflows/update-dependencies-to-commits.yml
@@ -53,12 +53,32 @@ jobs:
           echo "$REPO@$LATEST_SHA" >> latest-shas.txt
         done
         cat latest-shas.txt
+
     - name: Update packages in go.mod
       run: |
         while IFS= read -r line; do
           REPO=$(echo $line | cut -d'@' -f1)
           SHA=$(echo $line | cut -d'@' -f2)
-          MODULE_PATH=$(go list -m -f '{{.Path}}' $REPO)
+
+          echo "Processing $REPO@$SHA"
+
+          if [[ $REPO == "github.com/dell/dell-csi-extensions" ]]; then
+            SUBPACKAGES=("common" "migration" "podmon" "replication" "volumeGroupSnapshot")
+            for SUBPACKAGE in "${SUBPACKAGES[@]}"; do
+              if grep -q "$REPO/$SUBPACKAGE" go.mod; then
+                go get ${REPO}/${SUBPACKAGE}@${SHA}
+              else
+                echo "Skipping $REPO/$SUBPACKAGE: not a known dependency"
+              fi
+            done
+            continue
+          fi
+
+          MODULE_PATH=$(go list -m -f '{{.Path}}' $REPO  2>/dev/null)
+          if [[ $? -ne 0 ]]; then
+            echo "Skipping $REPO: not a known dependency"
+            continue
+          fi
 
           if [[ $MODULE_PATH == *"/v2"* ]]; then
             go get ${REPO}/v2@${SHA}
