disable exit on failure for shell

--- a/.github/workflows/update-dependencies-to-commits.yml
+++ b/.github/workflows/update-dependencies-to-commits.yml
@@ -60,6 +60,7 @@ jobs:
 
     - name: Update packages in go.mod
       run: |
+        set +e
         while IFS= read -r line; do
           REPO=$(echo $line | cut -d'@' -f1)
           SHA=$(echo $line | cut -d'@' -f2)
