remove the need for latest-shas.txt file

--- a/.github/workflows/update-dependencies-to-commits.yml
+++ b/.github/workflows/update-dependencies-to-commits.yml
@@ -34,7 +34,6 @@ jobs:
         go clean -modcache
 
     - name: Get latest commit SHAs
-      id: get-latest-shas
       run: |
         REPOS=(
           "github.com/dell/goscaleio"
@@ -52,16 +51,19 @@ jobs:
           "github.com/dell/csi-metadata-retriever"
           "github.com/dell/csi-volumegroup-snapshotter"
         )
+
+        SHAS=""
         for REPO in "${REPOS[@]}"; do
           LATEST_SHA=$(git ls-remote https://$REPO HEAD | awk '{print $1}')
-          echo "$REPO@$LATEST_SHA" >> latest-shas.txt
+          SHAS+="$REPO@$LATEST_SHA\n"
         done
-        cat latest-shas.txt
+        echo -e "SHAS=$SHAS" >> $GITHUB_ENV
+        echo "Latest SHAS: $SHAS"
 
     - name: Update packages in go.mod
       run: |
         set +e
-        while IFS= read -r line; do
+        echo "${{ env.SHAS }}" | while IFS= read -r line; do
           REPO=$(echo $line | cut -d'@' -f1)
           SHA=$(echo $line | cut -d'@' -f2)
 
@@ -98,7 +100,7 @@ jobs:
 
     # Needed for signing commits using Github App tokens
     # See: https://github.com/peter-evans/create-pull-request/blob/main/docs/concepts-guidelines.md#commit-signing
-    - uses: actions/create-github-app-token@v1.11.0
+    - uses: actions/create-github-app-token@v1.11.1
       id: generate-token
       with:
         app-id: ${{ vars.CSM_RELEASE_APP_ID }}
