--- a/.github/workflows/csm-release-driver-module.yaml
+++ b/.github/workflows/csm-release-driver-module.yaml
@@ -24,27 +24,32 @@ on:
 
 jobs:
   build-and-scan:
-    name: Build, Scan and Release
+    name: Build and Scan
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the code
         uses: actions/checkout@v4
-
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: "1.23"
-
       - name: Install dependencies
         run: go mod tidy
-
       # TODO: build binaries if any like dellctl, repctl etc.
       - name: Build
         run: go build -v ./...
 
+  release-and-tag:
+    name: Tag and Release
+    needs: build-and-scan
+    uses: dell/common-github-actions/.github/workflows/release-creator.yaml@main
+    with:
+      version: ${{ github.event.inputs.version }}
+    secrets: inherit
+
   push-images:
     name: Release images to Dockerhub and Quay
-    needs: build-and-scan
+    needs: release-and-tag
     runs-on: ubuntu-latest
     steps:
       - name: Log in to Docker Hub
@@ -78,46 +83,3 @@ jobs:
           --data-raw '{
             "manifest_digest": "${{ steps.get_quay_manifest.outputs.sha }}"
           }'
-  create-release:
-    name: Create release and branch
-    needs: push-images
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Import GPG key
-        uses: crazy-max/ghaction-import-gpg@v6
-        with:
-            gpg_private_key: ${{ secrets.CSM_GPG_PRIVATE_KEY }}
-            git_user_signingkey: true
-            git_commit_gpgsign: true
-            git_tag_gpgsign: true
-            git_config_global: true
-
-      - name: Create new tag
-        run: |
-            git tag -s -a v${{ inputs.version }} -m "Release v${{ inputs.version }}"
-            git push origin v${{ inputs.version }}
-      
-      # TODO: attach built binaries to the release (if any like repctl, dellctl etc.)
-      - name: Create Release
-        id: release_notes
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: v${{ inputs.version }}
-          name: Release v${{ inputs.version }}
-          draft: true
-          prerelease: false
-          generate_release_notes: true
-          make_latest: true
-          body: |
-            ## Documentation
-            [General Documentation](https://dell.github.io/csm-docs/docs/)
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Create release branch
-        run: |
-          git checkout -b release/v${{ inputs.version }}
-          git push origin release/v${{ inputs.version }}
