--- a/.github/workflows/csm-release-driver-module.yaml
+++ b/.github/workflows/csm-release-driver-module.yaml
@@ -18,7 +18,7 @@ on:
         type: string
         required: true
       image:
-        description: "Image name. Example: csi-powerstore"
+        description: "List of image names. Example: csi-powerstore,csi-isilon"
         type: string
         required: true
 
@@ -55,31 +55,40 @@ jobs:
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-      - name: Push Docker Image
+      - name: Push images to Dockerhub
         run: |
-          docker pull dellemc/${{ inputs.image }}:nightly
-          docker tag dellemc/${{ inputs.image }}:nightly dellemc/${{ inputs.image }}:v${{ inputs.version }}
-          docker push dellemc/${{ inputs.image }}:v${{ inputs.version }}
-          docker tag dellemc/${{ inputs.image }}:v${{ inputs.version }} dellemc/${{ inputs.image }}:latest
-          docker push dellemc/${{ inputs.image }}:latest
+          # Push each comma seperated images by splitting the string with ','
+          images_list=$(echo '${{ inputs.image }}' | tr -d '[]"' | tr ',' ' ')
+          for image in $images_list; do
+              echo "Pushing image: $image:${{ inputs.version }}"
+              docker pull dellemc/$image:nightly
+              docker tag dellemc/$image:nightly dellemc/$image:v${{ inputs.version }}
+              docker push dellemc/$image:v${{ inputs.version }}
+              docker tag dellemc/$image:v${{ inputs.version }} dellemc/$image:latest
+              docker push dellemc/$image:latest
+          done
 
-      - name: Get Quay Manifest
-        id: get_quay_manifest
+      - name: Push images to Quay.io
         run: |
-          SHA=$(curl -s --location --request GET 'https://quay.io/api/v1/repository/dell/container-storage-modules/${{ inputs.image }}/tag?specificTag=nightly' --header 'Content-Type: application/json' --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' | jq -r '.tags[0].manifest_digest')
-          echo "::set-output name=sha::$SHA"
-
-      - name: Push Quay Manifest
-        run: |
-          curl -s --location --request PUT 'https://quay.io/api/v1/repository/dell/container-storage-modules/${{ inputs.image }}/tag/v${{ inputs.version }}' \
-          --header 'Content-Type: application/json' \
-          --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' \
-          --data-raw '{
-            "manifest_digest": "${{ steps.get_quay_manifest.outputs.sha }}"
-          }'
-          curl -s --location --request PUT 'https://quay.io/api/v1/repository/dell/container-storage-modules/${{ inputs.image }}/tag/latest' \
-          --header 'Content-Type: application/json' \
-          --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' \
-          --data-raw '{
-            "manifest_digest": "${{ steps.get_quay_manifest.outputs.sha }}"
-          }'
+          # Push each comma seperated images by splitting the string with ','
+          images_list=$(echo '${{ inputs.image }}' | tr -d '[]"' | tr ',' ' ')
+          for image in $images_list; do
+              echo "Pushing image: $image:${{ inputs.version }}"
+          
+              # Get manifest digest
+              SHA=$(curl -s --location --request GET 'https://quay.io/api/v1/repository/dell/container-storage-modules/$image/tag?specificTag=nightly' --header 'Content-Type: application/json' --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' | jq -r '.tags[0].manifest_digest')
+          
+              # Create version and latest tags
+              curl -s --location --request PUT 'https://quay.io/api/v1/repository/dell/container-storage-modules/$image/tag/v${{ inputs.version }}' \
+              --header 'Content-Type: application/json' \
+              --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' \
+              --data-raw '{
+                "manifest_digest": "$SHA"
+              }'
+              curl -s --location --request PUT 'https://quay.io/api/v1/repository/dell/container-storage-modules/$image/tag/latest' \
+              --header 'Content-Type: application/json' \
+              --header 'Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}' \
+              --data-raw '{
+                "manifest_digest": "$SHA"
+              }'
+          done
