--- a/.github/workflows/go-common.yml
+++ b/.github/workflows/go-common.yml
@@ -37,6 +37,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run unit tests and check package coverage
+        id: test_coverage
         uses: dell/common-github-actions/go-code-tester@modify-UT-action
         with:
           threshold: ${{ env.CODE_COVERAGE_TARGET }}
@@ -46,6 +47,14 @@ jobs:
           skip-test: ${{ env.SKIP_TEST }}
           run-test: ${{ env.RUN_TEST }}
           exclude-directory: ${{ env.EXCLUDE_DIRECTORIES }}
+
+      - name: Set coverage result
+        run: echo "##[set-output name=coverage;]$(cat coverage.txt)"
+        shell: bash
+
+      - name: Coverage results
+        run: |
+          echo "Coverage results: ${{ steps.test_coverage.outputs.coverage }}"
 
   # Check sources for security vulnerabilities
   security:
