--- a/.github/workflows/csm-release-libs.yaml
+++ b/.github/workflows/csm-release-libs.yaml
@@ -43,7 +43,7 @@ jobs:
   release-and-tag:
     name: Tag and Release
     needs: build-and-scan
-    uses: dell/common-github-actions/.github/workflows/release-creator.yaml@feature/release-creator
+    uses: dell/common-github-actions/.github/workflows/release-creator.yaml@main
     with:
       version: ${{ github.event.inputs.version }}
     secrets: inherit
