updated code owners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -10,6 +10,7 @@
 # Aron Suliman (AronAtDell)
 # Christian Coffield (ChristianAtDell)
 # Don Khan (donatwork)
+# Meghana GM (meggm)
 # Sean Gallacher (gallacher)
 # Alexander Hoppe (hoppea2)
 # Harish Prabhakara (harishp8889)
@@ -20,4 +21,4 @@
 
 
 # for all files:
-* @AronAtDell @ChristianAtDell @donatwork @gallacher @hoppea2 @harishp8889 @mjsdell @prablr79 @sharmilarama @shaynafinocchiaro
+* @AronAtDell @ChristianAtDell @donatwork @meggm @gallacher @hoppea2 @harishp8889 @mjsdell @prablr79 @sharmilarama @shaynafinocchiaro
